# bietheirbed

./: .gitignore  README.md  main.py  pyproject.toml  test_cli.py
.claude/: settings.local.json
.trae/documents/: architecture-optimization-execution.md  complete-plan-system-prompt-inject.md  fix-duplicate-output-think-display.md  fix-english-prompt-react-search.md  fix-llm-timeout-prompt-size.md  fix-prompt-english-and-react.md  fix-react-loop-and-push.md  fix-streaming-and-llama-compat.md  fix-system-message-merge.md  fix-thinking-stream-output.md  fix-token-count-and-cli-redesign.md  fix-token-count-status-bar.md  fix-tool-display-memory-chinese.md  fix_agent_infinite_loop.md  full-architecture-review.md  knowledge_base_plan.md
.trae/specs/build-computer-assistant/: checklist.md  spec.md  tasks.md
.trae/specs/cross-platform-llm-api-tui/: checklist.md  spec.md  tasks.md
config/: default.yaml
src/pc_assistant/: __init__.py  agent.py  config.py  exceptions.py  llm_provider.py  logger.py  platform_.py
src/pc_assistant/context/: __init__.py  conversation.py  memory.py  system_prompt.py  truncator.py
src/pc_assistant/harness/: __init__.py  (+4 more)
tests/: conftest.py  test_agent.py  test_config.py  test_context.py  test_conversation.py  test_e2e.py  test_exceptions.py  test_harness.py  test_limiter.py  test_llm_provider.py  test_memory.py  test_platform.py  test_safety.py  test_tools_application.py  test_tools_base.py  test_tools_clipboard.py  test_tools_filesystem.py  test_tools_shell.py  test_tools_system.py  test_tools_web.py  test_truncator.py  test_ui_chat.py
(+22 files in other folders)
