[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pc_assistant"
version = "0.1.0"
description = "A Python computer assistant agent"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "Pillow>=10.0",
    "mss>=9.0",
    "pyperclip>=1.8",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
pc-assistant = "pc_assistant:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pc_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pc_assistant"]
omit = ["src/pc_assistant/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
fail_under = 80
